--- a/RickAndMortyApp/RickAndMortyApp/Storyboards/Base.lproj/Main.storyboard
+++ b/RickAndMortyApp/RickAndMortyApp/Storyboards/Base.lproj/Main.storyboard
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Jsb-RS-7CB">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="0o9-KT-Qh8">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Characters View Controller-->
+        <!--Rick And Morty-->
         <scene sceneID="IdF-4O-gpM">
             <objects>
                 <collectionViewController id="Jsb-RS-7CB" customClass="CharactersViewController" customModule="RickAndMortyApp" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="0Jz-JY-MdY">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" sectionInsetReference="layoutMargins" id="MAH-aX-1cq">
                             <size key="itemSize" width="128" height="128"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -45,6 +45,7 @@
                                 <size key="customSize" width="128" height="128"/>
                                 <connections>
                                     <outlet property="imageView" destination="OdX-ri-dpf" id="8zf-kD-EeD"/>
+                                    <segue destination="erp-RE-TxS" kind="show" identifier="" id="Phs-S3-UVm"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -53,15 +54,73 @@
                             <outlet property="delegate" destination="Jsb-RS-7CB" id="xVK-8E-nFv"/>
                         </connections>
                     </collectionView>
+                    <navigationItem key="navigationItem" title="Rick And Morty" id="NDn-i8-mZm"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R5s-oH-M3a" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-228" y="37"/>
+            <point key="canvasLocation" x="681.15942028985512" y="36.830357142857139"/>
+        </scene>
+        <!--Details View Controller-->
+        <scene sceneID="xIC-17-3BU">
+            <objects>
+                <viewController id="erp-RE-TxS" customClass="DetailsViewController" customModule="RickAndMortyApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Fei-Bs-bpP">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Zii-SE-suO">
+                                <rect key="frame" x="0.0" y="140" width="414" height="402"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PKS-ui-dbj">
+                                <rect key="frame" x="16" y="603" width="382" height="20.333333333333371"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="RYJ-do-L6g"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="PKS-ui-dbj" firstAttribute="leading" secondItem="RYJ-do-L6g" secondAttribute="leading" constant="16" id="1dY-6D-2Ia"/>
+                            <constraint firstItem="PKS-ui-dbj" firstAttribute="top" secondItem="Zii-SE-suO" secondAttribute="bottom" constant="61" id="DVh-ff-hfy"/>
+                            <constraint firstItem="Zii-SE-suO" firstAttribute="leading" secondItem="RYJ-do-L6g" secondAttribute="leading" id="YbY-5A-ruw"/>
+                            <constraint firstItem="Zii-SE-suO" firstAttribute="trailing" secondItem="RYJ-do-L6g" secondAttribute="trailing" id="ZGo-uV-ziH"/>
+                            <constraint firstItem="Zii-SE-suO" firstAttribute="height" secondItem="Fei-Bs-bpP" secondAttribute="height" multiplier="0.448661" id="g9D-jq-J1a"/>
+                            <constraint firstItem="RYJ-do-L6g" firstAttribute="trailing" secondItem="PKS-ui-dbj" secondAttribute="trailing" constant="16" id="gF2-6P-Fbi"/>
+                            <constraint firstItem="Zii-SE-suO" firstAttribute="top" secondItem="RYJ-do-L6g" secondAttribute="top" id="uwJ-Ta-sNO"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="ssP-cG-5GO"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="63w-CC-2I7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1460.8695652173915" y="36.830357142857139"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="JZ4-iR-O0n">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="0o9-KT-Qh8" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="BeZ-Fr-jwR">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Jsb-RS-7CB" kind="relationship" relationship="rootViewController" id="FdH-sE-yXq"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XpD-yT-rfi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-228.98550724637684" y="36.830357142857139"/>
         </scene>
     </scenes>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
